update api methods and their tests and doc #24
